Add configuration to decide what to store to disk and what not.

--- a/default_config.json
+++ b/default_config.json
@@ -1,4 +1,9 @@
 {
     "GetListTime": 30000000000,
-    "MaxReviewsServed": 10
+    "MaxReviewsServed": 10,
+    "SaveConfig": true,
+    "SavePackages": true,
+    "SaveAliases": true,
+    "SaveReviews": false,
+    "SaveAlerts": true
 }
