Refactor alert system so each alert tracks its own status

--- a/default_config.json
+++ b/default_config.json
@@ -1,5 +1,6 @@
 {
     "GetListTime": 30,
+    "AlertWatcherTime": 30,
     "MaxReviewsServed": 10,
     "SaveConfig": true,
     "SavePackages": true,
